@@ -1,6 +1,14 @@
 2009-06-07  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
+	2009-06-03  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/40328
+	* gcc.dg/torture/pr40328.c: New testcase.
+
+2009-06-07  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline:
 	2009-06-07  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR middle-end/32950
